--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             <div class="content-wrapper">
                 <div class="hero-section">
                     <h2 class="title">În Curând</h2>
-                    <p class="subtitle">Situl se află în dezvoltare</p>
-                    <p class="description">
-                        Suntem mereu disponibili la numărul de telefon de mai jos.
-                    </p>
+                    <p class="subtitle">Site-ul se află în dezvoltare</p>
+                    
                 </div>
 
                 <div class="countdown-section">
